--- a/vercel.json
+++ b/vercel.json
@@ -10,5 +10,5 @@
       "PLAYWRIGHT_BROWSERS_PATH": "0"
     }
   },
-  "installCommand": "npm install && playwright install --with-deps chromium && pip install -r api/requirements.txt"
+  "installCommand": "npm install && npx playwright install --with-deps chromium && pip install -r api/requirements.txt"
 }
